<resources>
    <string name="app_name">RytRyde</string>
    <string name="title_activity_onboarder">Onboarder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="title_activity_login">LoginActivity</string>

    <string name="prompt_email">Enter Email Address</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to RytRyde!</string>
    <string name="prompt_login">Login to continue to the app</string>
    <string name="forgot_password">"Forgot Password"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="logging_in">Logging in</string>
    <string name="authenticationFailed">Authentication Failed</string>
    <string name="authenticationFailed_message">Either username or password is incorrect</string>
    <string name="ok">OK</string>
    <string name="ride">My Rides</string>
    <string name="account">My Account</string>
    <string name="content_description_search">My Rides</string>
    <string name="content_description_more">My Account</string>
    <string name="contacts">My Contacts</string>
    <string name="offeredRides">Offered Rides</string>
    <string name="requestedRides">Requested Rides</string>
    <string name="savedAddress">Saved Address</string>
    <string name="myGroups">My Groups</string>
    <string name="about">About</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="who_are_we">Who are we?</string>
    <string name="logout">Logout</string>
    <string name="myVechicle">My Vehicle</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="share_your_location">Share your location</string>
    <string name="find_location_easily_by_allowing_rytryde_to_acces_your_location">Find location easily by allowing RytRyde to acces your location</string>
    <string name="access">Access</string>
    <string name="not_now">Not now</string>
    <string name="allow_contacts_access">Allow contacts access</string>
    <string name="find_trusted_connections_easier_by_allowing_rytryde_to_access_your_contact">Find trusted connections easier by allowing RytRyde to access your contact</string>
    <string name="fill_vehicle_details">Fill Vehicle Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_your_subject">Select your Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="your_vehicle_details_are_saved">Your vehicle details are saved</string>
    <string name="thank_you">Thank You!</string>
    <string name="it_s_great_to_have_you_can_board_ndon_t_be_shy_create_some_rytryde_and_get_in_touch_if_you_have_any_suggestions">It\'s great to have you can board. Don\'t be shy, create some RytRyde and get in touch if you have any suggestions.</string>
    <string name="brand_name">Brand Name</string>
    <string name="model">Model</string>
    <string name="colour">Colour</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="license_number">License Number</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="my_group">My group</string>
    <string name="search_group">Search group</string>
    <string name="my_contacts">My Contacts</string>
    <string name="trusted">Trusted</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in"> Sign In</string>
    <string name="there_you_go_enter_and_confirm_your_new_password">There you go! Enter and confirm your new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="don_t_worry_it_happens_to_all_of_us_to_fix_the_problem_you_ll_first_have_to_enter_your_registered_mobile_number">Don\'t worry, It happens to all of us. To fix the problem, you\'ll first have to enter your registered mobile number.</string>
    <string name="hmm_we_can_t_find_this_number_on_ou_records_please_try_again_or_contact_support_for_assistance">Hmm.. We can\'t find this number on ou records. Please try again or contact support for assistance</string>
    <string name="reset_password___">Reset Password...</string>
    <string name="we_are_almost_there">We are almost there.</string>
    <string name="please_enter_the_otp_that_we_send_to_your_registered_number">Please enter the OTP that we send to your registered number.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="create_group">Create Group</string>
    <string name="save">Save</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_participants">Add Participants</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="ride_match_radius">Ride Match Radius</string>
    <string name="default_your_value_is_5km_user_can_enter_a_value_upto_99km">Default your value is 5Km. User can enter a value upto 99km</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="upload_license_image">Upload License Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="enter_the_pin_you_have_recived_via_sms_on_mobile_number_edit_number">Enter the pin you have recived via SMS on mobile number. Edit number</string>
    <string name="continue_">Continue</string>
    <string name="resend_code">Resend code</string>
    <string name="complete_your_details">Complete your details</string>
    <string name="please_put_in_your_name">Please put in your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="hi_there_nice_to_see_you_again">Hi there! Nice to see you again.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_use_one_of_your_social_profiles">or use one of your social profiles</string>
    <string name="forgot_password__">Forgot Password?</string>
    <string name="exit_group">Exit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="my_phonebook">My Phonebook</string>
    <string name="add">Add</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offered_rides">Offered rides</string>
    <string name="requested_rides">Requested Rides</string>
    <string name="saved_address">Saved Address</string>
    <string name="my_groups">My Groups</string>
    <string name="join_group">Join Group</string>
    <string-array name="onboarder_title">
        <item>Hey there! We don"'"t charge per ride!</item>
        <item>The Alternative to On Demand</item>
        <item>It Makes Sense</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="onboarder_desc">
        <item>With RytRyde you drive or ride with a friend.</item>
        <item>We will try to match your journey with one of your trusted connections.</item>
        <item>By matching your journey with that of a friend, our partnership helps the environment and you save by travelling together.</item>
    </string-array>
    <string name="share_your_location">Share your location</string>
    <string name="find_location_easily_by_allowing_rytryde_to_acces_your_location">Find location easily by allowing RytRyde to acces your location</string>
    <string name="access">Access</string>
    <string name="not_now">Not now</string>
    <string name="allow_contacts_access">Allow contacts access</string>
    <string name="find_trusted_connections_easier_by_allowing_rytryde_to_access_your_contact">Find trusted connections easier by allowing RytRyde to access your contact</string>
    <string name="fill_vehicle_details">Fill Vehicle Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="select_your_subject">Select your Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string-array name="onboarder_title">
        <item>Hey there! We don"'"t charge per ride!</item>
        <item>The Alternative to On Demand</item>
        <item>It Makes Sense</item>
    </string-array>
    <string-array name="onboarder_desc">
        <item>With RytRyde you drive or ride with a friend.</item>
        <item>We will try to match your journey with one of your trusted connections.</item>
        <item>By matching your journey with that of a friend, our partnership helps the environment and you save by travelling together.</item>
    </string-array>
</resources>