<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUpActivity">

    <CheckBox
        android:id="@+id/cb_terms_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_1"
        android:layout_marginStart="@dimen/activity_double_horizontal_margin"
        android:checked="true"
        android:fontFamily="@font/gothicregular"
        android:text="@string/i_agree_to_the"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_heigth_40_dp"
        android:layout_below="@id/txt_mobileNumber"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/text_size"
        android:layout_marginEnd="@dimen/activity_double_horizontal_margin"
        android:layout_toEndOf="@id/country_picker"
        android:background="@android:color/transparent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_continue"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_already_have_an_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_continue"
            android:layout_marginTop="@dimen/activity_double_horizontal_margin"
            android:fontFamily="@font/gothicregular"
            android:text="@string/already_have_an_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/activity_double_horizontal_margin"
            android:layout_marginBottom="@dimen/text_size"
            android:fontFamily="@font/gothicregular"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/green" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_mobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_signUp"
        android:layout_marginStart="@dimen/activity_double_horizontal_margin"
        android:layout_marginTop="@dimen/dp_100"
        android:fontFamily="@font/gothicregular"
        android:text="@string/mobile_number"
        android:textColor="@color/green" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_1"
        android:layout_toRightOf="@+id/cb_terms_condition"
        android:fontFamily="@font/gothicregular"
        android:paddingTop="15dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/green" />

    <TextView
        android:id="@+id/txt_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_double_horizontal_margin"
        android:layout_marginTop="@dimen/activity_double_horizontal_margin"
        android:fontFamily="@font/gothicbold"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/country_picker"
        android:layout_marginStart="@dimen/activity_double_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_double_horizontal_margin"
        android:background="@color/light_grey" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_terms_condition"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_double_horizontal_margin"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginRight="@dimen/activity_double_horizontal_margin"
        android:background="@color/primaryColour"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="@dimen/nav_header_vertical_spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gothicbold"
            android:gravity="center"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:text="@string/continue_"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>


    <com.hbb20.CountryCodePicker
        android:id="@+id/country_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_mobileNumber"
        android:layout_marginStart="@dimen/activity_double_horizontal_margin"
        android:layout_marginTop="@dimen/text_size"
        android:background="@color/light_grey"
        app:ccp_defaultNameCode="US" />
</RelativeLayout>